
WIP      Create a "fake" Parent/Clone list from filenames ala NARS (NARS Advanced ROM Sorting).
         In "Edit Launcher", "Audit ROMs / Launcher view mode" include a new option like
         "Create PClone DAT based on ROM filenames"

WIP      Options to generate the 1G1R parent list, like prefer ROMs from Europe, Japan or USA.
         This resembles what NARS No-Intro filtering does.


[B]Advanced Emulator Launcher | version 0.9.7-beta2 | 19 November 2017[/B]

FIX      Currently AEL multid-disc parser supports "Rom name (disc 1).bin".
         Fixed to also support "Rom name (disk 1).bin".
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2656844#pid2656844
         and https://forum.kodi.tv/showthread.php?tid=287826&pid=2657243#pid2657243

FIX      Fix export of Launcher and ROM NFO files.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2658080#pid2658080

FIX      Fix import of Launcher and ROM NFO files.

FIX      Poster artworks do not appear anymore (got them mapped to flyers for all launchers).
         When I try to change the mapping (manage rom/choose roms default assets/artworks),
         then AEL is throwing me an error.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2660404#pid2660404

FIX      Fix crash in "Add ROMs", "Manually Add ROM".
         Error Type: <type 'exceptions.NameError'>
         Error Contents: global name 'assets_search_local_assets' is not defined
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2665544#pid2665544


[B]Advanced Emulator Launcher | version 0.9.7-beta1 | 07 October 2017[/B]

FEATURE  Added a lot of new platforms.

FEATURE  Add an option to see ROM Maps image if it exists.
         Add an option in context menu "View ROM/Launcher".

FEATURE  Audit all launchers. Check if app exists, ROM path exits, artwork paths are configured,
         etc. When a user uses XML to import configurations it is easy to make a typo when